# FlowDIS

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt
assets/: teaser-dark.avif  teaser-light.avif
assets/examples/: examples.csv  prompts.json
demo/: app.py  qwen.py
flowdis/: __init__.py  conditioner.py  configs.py  layers.py  loaders.py  model.py  sampling.py  util.py
